@@ -1,5 +1,5 @@
 Apache Commons Compress
-Copyright 2002-2010 The Apache Software Foundation
+Copyright 2002-2011 The Apache Software Foundation
 
 This product includes software developed by
 The Apache Software Foundation (http://www.apache.org/).
